--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   Сайт студента Лозы Леонида Владимировича гр.3239
   <a href="22oct24.html"> 22 октября 2024</a> 
   <a href="23oct24.html"> 23 октября 2024</a>
+  <a href="28oct24.html"> 28 октября 2024</a>  
 </body>
 </html>
