--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <a href="22oct24.html"> 22 октября 2024</a> 
   <a href="23oct24.html"> 23 октября 2024</a>
   <a href="28oct24.html"> 28 октября 2024</a>
-  <a href="31oct24.html"> 31 октября 2024</a> 
+  <a href="31oct24.html"> 31 октября 2024</a>
+  <a href="01nov24.html"> 2 ноября 2024</a>  
 </body>
 </html>
