--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <a href="28oct24.html"> 28 октября 2024</a>
   <a href="31oct24.html"> 31 октября 2024</a>
   <a href="02nov24.html"> 02 ноября 2024</a>
+  <a href="07nov24.html"> 07 ноября 2024</a>  
 </body>
 </html>
