--- a/07nov24.html
+++ b/07nov24.html
@@ -12,21 +12,22 @@
     let startBox = document.createElement('div');
     document.body.append(startBox);
 
-    function draw(size) {
+    function draw(size, parentBox) {
 
         if(size>10){    
         let box = document.createElement('div');
         box.style.width = size + 'px';
         box.style.height = size + 'px';
         box.style.border = '1px solid green';
-        document.body.append(box);
+        box.style.transform = 'rotate(50deg)';
+        parentBox.append(box);
 
-        draw(size/2);
+        draw(size/2, box);
             }    
     
     }
 
 
-    draw(500);
+    draw(500, startBox);
 </script>
 </html>
