--- a/11nov24.html
+++ b/11nov24.html
@@ -10,11 +10,14 @@
     <input type="text" id="key" placeholder="ключ">
     <button onclick="encrypt()">Зашифровать</button>
     <div id="encrypted"></div>
+    <br>
+    <div id="unEncrypted"></div>
 
     <script>
         let text0 = document.getElementById('t0'); 
         let key = document.getElementById( 'key'); 
         let encr = document.getElementById('encrypted'); 
+        let unEncr = document.getElementById('unEncrypted')
 
         function encrypt(){
             let t = text0.value; 
@@ -22,7 +25,8 @@
 
     for (let i=0; i < len; i++){
         let uniCode = t.charCodeAt(i); 
-        encr. innerText += uniCode + '.';
+        encr.innerText += uniCode + '.';
+        unEncr.innerText += String.fromCharCode(uniCode + parseInt(key.value));
     }
 }
     </script>
