--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <a href="11nov24.html"> 11 ноября 2024. Шифрование.</a>
   <a href="18nov24.html"> 18 ноября 2024</a>
   <a href="25nov24.html"> 25 ноября 2024</a>
-  <a href="28nov24.html"> 28 ноября 2024</a>   
+  <a href="28nov24.html"> 28 ноября 2024</a>
+  <a href="02dec24.html"> 2 декабря 2024. HTTP-запросы.</a>  
 </body>
 </html>
