--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <a href="18nov24.html"> 18 ноября 2024</a>
   <a href="25nov24.html"> 25 ноября 2024</a>
   <a href="28nov24.html"> 28 ноября 2024</a>
+  <a href="02.dec.24.html"> 2 декабря 2024. HTTP-запросы.</a>
   <a href="02.dec.24.html"> 2 декабря 2024. HTTP-запросы.</a>  
 </body>
 </html>
