--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <a href="09dec24.html"> 9 декабря 2024.</a>
   <a href="12dec24.html"> 12 декабря 2024.</a>
   <a href="16dec24.html"> 16 декабря 2024.</a>
+  <a href="19dec24.html"> 19 декабря 2024.</a>  
 </body>
 </html>
